--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^16.18.57",
     "@types/react": "^18.2.25",
     "@types/react-beautiful-dnd": "^13.1.5",
     "@types/react-dom": "^18.2.10",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
